# behoof_backend

./: .coveragerc  .dockerignore  .env  .flake8  .gitignore  Dockerfile  behoof-backend.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: tests_and_deploy.yml
behoof/: asgi.py  db_router.py  settings.py  urls.py  wsgi.py
behoof/graphql/: schema.py
behoof/graphql/nodes/: IsPublichedNode.py
foods/: admin.py
foods/migrations/: 0001_initial.py  0002_alter_food_kilocalories.py  0003_food_preview_description_alter_food_composition_and_more.py
foods/models/: Category.py  Food.py
foods/schema/filters/: FoodFilter.py
foods/schema/nodes/: FoodNode.py
foods/schema/queries/: CategoryQuery.py  FoodQuery.py
foods/schema/types/: CategoryType.py  FoodType.py
foods/tests/test_models/: test_category_model.py  test_food_model.py
promotions/: admin.py
promotions/migrations/: 0001_initial.py  0002_promotion_is_published.py
promotions/models/: Promotion.py
restaurants/: admin.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_address.py
restaurants/models/: Restaurant.py
users/: admin.py  urls.py
users/backends/: AuthBackend.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_email_and_more.py  0003_alter_user_email.py
users/models/: User.py  UserManager.py
users/serializers/: LoginUserSerializer.py  RegistrationUserSerializer.py  UserProfileSerializer.py
users/views/: CheckAccessView.py  LoginUserView.py  LogoutUserView.py  RefreshTokenView.py  RegistrationUserView.py
(+29 files in other folders)
